Use jdk.internal.misc.Unsafe instead of sun.misc.Unsafe